fix torn gap

--- a/src/app/page.css
+++ b/src/app/page.css
@@ -133,7 +133,7 @@
 .torn-edge {
   position: absolute;
   left: 0;
-  bottom: -23px;
+  bottom: -22px;
   width: 100%;
   height: auto;
   display: block;
